force-app/main/default/objects/Pet__c/fields/Born__c.field-meta.xml
<CustomField>
    <fullName>Born__c</fullName>
    <description>The age of the pet</description>
    <label>Born</label>
    <type>Date</type>
</CustomField>