force-app/main/default/objects/Pet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>The breed of the dog record</description>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>beagle</fullName>
            </value>
            <value>
                <fullName>boxer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>