force-app/main/default/objects/Pet__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Province of the current Pet location</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provinces</valueSetName>
    </valueSet>
</CustomField>