force-app/main/default/objects/Pet__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <description>Displays the picture of the Pet</description>
    <formula>IMAGE( PictureUrl__c , &apos;Pet Picture&apos; )</formula>
    <label>Picture</label>
    <type>Text</type>
</CustomField>