force-app/main/default/objects/Pet__c/fields/PictureUrl__c.field-meta.xml
<CustomField>
    <fullName>PictureUrl__c</fullName>
    <label>ImageUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>