force-app/main/default/objects/Pet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Describes the adoption process for a pet</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>RegisteredAvailable</fullName>
                <label>Registered - Available</label>
            </value>
            <value>
                <fullName>InAdoptionProcess</fullName>
                <label>In Adoption Process</label>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>