force-app/main/default/objects/Pet__c/recordTypes/Dog.recordType-meta.xml
<RecordType>
    <fullName>Dog</fullName>
    <active>true</active>
    <description>Indicates a rescued dog registered in the Animal Shelter</description>
    <label>Dog</label>
</RecordType>